[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ButtonBaseImage" type="Button" parent="."]
margin_left = 143.0
margin_top = 181.0
margin_right = 264.0
margin_bottom = 217.0
text = "BaseImage!"

[node name="ButtonPaper" type="Button" parent="."]
margin_left = 442.0
margin_top = 174.0
margin_right = 559.0
margin_bottom = 209.0
text = "Paper"

[node name="ButtonInk" type="Button" parent="."]
margin_left = 758.0
margin_top = 182.0
margin_right = 853.0
margin_bottom = 216.0
text = "Ink!"

[node name="SpriteBaseImage" type="Sprite" parent="."]
position = Vector2( 200, 100 )

[node name="SpritePaper" type="Sprite" parent="."]
position = Vector2( 500, 100 )
scale = Vector2( 2, 2 )

[node name="SpriteInk" type="Sprite" parent="."]
position = Vector2( 800, 100 )
scale = Vector2( 2, 2 )

[node name="FileDialogBase" type="FileDialog" parent="."]
margin_left = 307.0
margin_top = 134.0
margin_right = 763.0
margin_bottom = 350.0
window_title = "Abrir un Archivo"
mode = 0
access = 2

[node name="FileDialogPaper" type="FileDialog" parent="."]
margin_left = 307.0
margin_top = 134.0
margin_right = 763.0
margin_bottom = 350.0
window_title = "Abrir un Archivo"
mode = 0
access = 2

[node name="FileDialogInk" type="FileDialog" parent="."]
margin_left = 307.0
margin_top = 134.0
margin_right = 763.0
margin_bottom = 350.0
window_title = "Abrir un Archivo"
mode = 0
access = 2

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 1283.0
margin_top = 540.0
margin_right = 1591.0
margin_bottom = 1002.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="DotSizeMax" type="HScrollBar" parent="."]
margin_left = 191.0
margin_top = 537.0
margin_right = 358.0
margin_bottom = 640.0
step = 1.0

[node name="DotSizeMin" type="HScrollBar" parent="."]
margin_left = 191.0
margin_top = 682.0
margin_right = 358.0
margin_bottom = 775.0
step = 1.0

[node name="BlurImg" type="Sprite" parent="."]
position = Vector2( 600, 600 )

[node name="GrayImg" type="Sprite" parent="."]
position = Vector2( 1000, 600 )

[connection signal="pressed" from="ButtonBaseImage" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonPaper" to="." method="_on_ButtonPaper_pressed"]
[connection signal="pressed" from="ButtonInk" to="." method="_on_ButtonInk_pressed"]
[connection signal="file_selected" from="FileDialogBase" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialogPaper" to="." method="_on_FileDialogPaper_file_selected"]
[connection signal="file_selected" from="FileDialogInk" to="." method="_on_FileDialogInk_file_selected"]
